--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myswipelist"
-        minSdkVersion 12
+        minSdkVersion 16
         targetSdkVersion 19
     }
 
@@ -21,5 +21,6 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile "com.android.support:appcompat-v7:20.0.+"
+    compile 'com.android.support:recyclerview-v7:21.0.0'
     compile files('libs/nineoldandroids-2.4.0.jar')
 }
