--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myswipelist"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 19
     }
 
@@ -22,5 +22,6 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile "com.android.support:appcompat-v7:20.0.+"
     compile 'com.android.support:recyclerview-v7:21.0.0'
+    compile 'org.apmem.tools:layouts:1.8@aar'
     compile files('libs/nineoldandroids-2.4.0.jar')
 }
